SB-60 Fixed style, now the text is white for better visibility

--- a/Gameblasts/wwwroot/css/site.css
+++ b/Gameblasts/wwwroot/css/site.css
@@ -239,4 +239,6 @@ textarea {
     
 }
 
- 
+#white {
+    color: white;
+}
